k8s/apps/network/zigbee2mqtt/deployment.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zigbee2mqtt
  namespace: zigbee2mqtt
  labels:
    app.kubernetes.io/name: zigbee2mqtt
    app.kubernetes.io/instance: zigbee2mqtt
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: zigbee2mqtt
      app.kubernetes.io/instance: zigbee2mqtt
  template:
    metadata:
      labels:
        app.kubernetes.io/name: zigbee2mqtt
        app.kubernetes.io/instance: zigbee2mqtt
    spec:
      nodeSelector:
        feature.node.kubernetes.io/zigbee-adapter: "true"
      containers:
        - name: zigbee2mqtt
          image: docker.io/koenkk/zigbee2mqtt:1.32.1
          securityContext:
            privileged: true
          volumeMounts:
            - name: zigbee-dongle
              mountPath: /dev/ttyUSB0
            - name: data
              mountPath: /app/data
      volumes:
        - name: zigbee-dongle
          hostPath:
            path: /dev/serial/by-id/usb-Silicon_Labs_Sonoff_Zigbee_3.0_USB_Dongle_Plus_0001-if00-port0
            type: CharDevice
        - name: data
          persistentVolumeClaim:
            claimName: data-zigbee2mqtt
