k8s/apps/network/zigbee2mqtt/svc.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: zigbee2mqtt
  namespace: zigbee2mqtt
  labels:
    app.kubernetes.io/name: zigbee2mqtt
    app.kubernetes.io/instance: zigbee2mqtt
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: zigbee2mqtt
    app.kubernetes.io/instance: zigbee2mqtt
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
