k8s/apps/network/zigbee2mqtt/ingress.k8s.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/traefik.containo.us/ingressroute_v1alpha1.json
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: zigbee2mqtt
  namespace: zigbee2mqtt
  labels:
    app.kubernetes.io/name: zigbee2mqtt
    app.kubernetes.io/instance: zigbee2mqtt
  annotations:
    kubernetes.io/ingress.class: ingress-internal-traefik
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Zigbee2MQTT"
    gethomepage.dev/group: "Smart Home"
    gethomepage.dev/icon: "zigbee2mqtt"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`zigbee2mqtt.emnt.dev`)
      middlewares:
        - name: authentik
          namespace: zigbee2mqtt
      services:
        - name: zigbee2mqtt
          namespace: zigbee2mqtt
          port: 8080
    - kind: Rule
      match: "Host(`zigbee2mqtt.emnt.dev`) && PathPrefix(`/outpost.goauthentik.io/`)"
      services:
        - name: authentik
          namespace: authentik
          port: 9000
